[gd_scene load_steps=7 format=3 uid="uid://bmsbb262j11w7"]

[ext_resource type="Texture2D" uid="uid://bvxrfc530wy76" path="res://paths/ui/blank.png" id="1_4mo16"]
[ext_resource type="Script" uid="uid://cufgjpblnsj3" path="res://paths/ui/trick_upgrade_button.gd" id="2_12rqu"]
[ext_resource type="Theme" uid="uid://dp5g3ps8eyno7" path="res://ui/button_theme.tres" id="3_12rqu"]
[ext_resource type="Texture2D" uid="uid://cfuvblro7y1oh" path="res://ui/button.png" id="4_qs4nh"]

[sub_resource type="LabelSettings" id="LabelSettings_muabv"]
resource_local_to_scene = true
font_size = 40
outline_size = 8
outline_color = Color(1, 1, 1, 0.2509804)

[sub_resource type="LabelSettings" id="LabelSettings_xm21l"]
outline_size = 5
outline_color = Color(0.1254902, 0.1254902, 0.1254902, 1)

[node name="Button" type="TextureButton"]
self_modulate = Color(0.498039, 0.498039, 0.498039, 1)
custom_minimum_size = Vector2(60, 60)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_4mo16")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_12rqu")
extra = "upgrade_cost"

[node name="Symbol" type="Label" parent="."]
self_modulate = Color(0.498039, 0.498039, 0.498039, 1)
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
text = "?"
label_settings = SubResource("LabelSettings_muabv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_xm21l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bind" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -20.0
offset_right = 15.0
grow_horizontal = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_12rqu")
toggle_mode = true
text = "[A]"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Bind"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qs4nh")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="toggled" from="Bind" to="." method="toggle_keybind_input"]
